The menu displays the close button on tablet and desktop views and that is a bug. The list of nav items displays the 'x' button when on tablet and desktop view and the 'x' button should be displayed only on mobile view. When the menu item is clicked on mobile view the menu slides in but when the menu is closed and the menu button is pressewd a second time the menu does not appear.

--- a/hasanosman/assets/css/style.css
+++ b/hasanosman/assets/css/style.css
@@ -101,7 +101,7 @@ html {
   .menu {
     top: 0;
     left: 0;
-    width: 100%;
+    width: 0;
     display: flex;
     flex-direction: row;
     padding: 1em;
